--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="content">
         <div class="column col-left reveal">
           <div class="img-card">
-            <img src="images/FB_IMG.jpg" alt="">
+            <img src="images/FB_IMG.jpg" alt="My picture">
           </div>
         </div>
         <div class="column col-right reveal">
