I added attribute to the pictures on my work section

--- a/index.html
+++ b/index.html
@@ -177,32 +177,32 @@ Created graphics for videos using Photoshop and Adobe After Effects..</p>
       <div class="content">
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/QCMM.png" alt="">
+            <img src="images/QCMM.png" alt="Logo For Bukky">
           </div>
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/work 2.jpg" alt="">
+            <img src="images/work 2.jpg" alt="Class Re-union">
           </div>
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/work 3.jpg" alt="">
+            <img src="images/work 3.jpg" alt="Roducate Production">
           </div>
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/GK TEK 3.png" alt="">
+            <img src="images/GK TEK 3.png" alt="Gideon's Logo">
           </div>
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/LOGO.png" alt="">
+            <img src="images/LOGO.png" alt="Danzelmedia Logo">
           </div>
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/danset.jpg" alt="">
+            <img src="images/danset.jpg" alt="Kwara Television Job">
           </div>
         </div>
         <div class="title reveal">
