--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <header>
-      <a href="#" class="brand">Daniel</a>
+      <a href="https://danzelmediagroup.wixsite.com/danzelmedia" class="brand" target="_blank">Daniel</a>
       <div class="menu-btn"></div>
       <div class="navigation">
         <a href="#main">Home</a>
@@ -34,7 +34,7 @@
           <h3>Motion Graphics Designer</h3>
           <h3>VideoGrapher</h3>
         </div>
-        <a href="#" class="btn">See My Work</a>
+        <a href="https://danzelmediagroup.wixsite.com/danzelmedia" class="btn" target="_blank">See My Work</a>
         <div class="media-icons">
           <a href="https://www.facebook.com/DANZELMEDIA" target="_blank"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/danzelmedia" target="blank"><i class="fab fa-instagram"></i></a>
@@ -182,7 +182,7 @@ Created graphics for videos using Photoshop and Adobe After Effects..</p>
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/work2.jpg" alt="Class Re-union">
+            <img src="images/PMMP.JPG" alt="Fass">
           </div>
         </div>
         <div class="card reveal">
