i made some changes

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Created graphics for videos using Photoshop and Adobe After Effects..</p>
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/PMMP.JPG" alt="Fass">
+            <img src="images/PMMP.jpg" alt="Fass">
           </div>
         </div>
         <div class="card reveal">
