Made changes on see my work

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h3>Motion Graphics Designer</h3>
           <h3>VideoGrapher</h3>
         </div>
-        <a href="https://danzelmediagroup.wixsite.com/danzelmedia" class="btn" target="_blank">See My Work</a>
+        <a href="https://danzelmediagroup.wixsite.com/danzelmedia" class="btn" target="_blank">See My Works</a>
         <div class="media-icons">
           <a href="https://www.facebook.com/DANZELMEDIA" target="_blank"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/danzelmedia" target="blank"><i class="fab fa-instagram"></i></a>
