--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
       <a href="https://danzelmediagroup.wixsite.com/danzelmedia" class="brand" target="_blank">Daniel</a>
       <div class="menu-btn"></div>
       <div class="navigation">
-        <a href="#main">Home</a>
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#services">Services</a>
-        <a href="#work">Work</a>
-        <a href="#contact">Contact</a>
+        <a href="main">Home</a>
+        <a href="about">About</a>
+        <a href="skills">Skills</a>
+        <a href="services">Services</a>
+        <a href="work">Work</a>
+        <a href="contact">Contact</a>
       </div>
     </header>
 
     <section class="main" id="main">
       <div class="content">
-        <h1>Hello, I'm<br><span>Daniel Udoncy</span></h1>
+        <h1>Hello, I'm<br><span>daniel UDONCY</span></h1>
         <div class="animated-text">
           <h3>Web Designer</h3>
           <h3>Motion Graphics Designer</h3>
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="column col-right reveal">
-          <h2 class="content-title">Hey There! I'm Daniel Udoncy</h2>
+          <h2 class="content-title">Hey There! I'm daniel UDONCY</h2>
           <p class="paragraph-text">A creative mind who don't gets satisfied with stories, how things have gone with others. But I unfold my own myth in motion pictures.
  A versatile multimedia professional with a mix of online video content video production, photography, editing, and streaming video to mobile devices
 Over 10 years of production experience creating compelling health, lifestyle videos
@@ -69,7 +69,7 @@ Created compelling videos for a number of public and private clients.
 I used a combination of interview style videos and motion graphic pieces to visually explain the objectives of the project in a concise and interesting manner.
 Shot and edited corporate, marketing videos, weddings and live events.
 Created graphics for videos using Photoshop and Adobe After Effects..</p>
-          <a href="#" class="btn">See More</a>
+          <a href="https://danzelmediagroup.wixsite.com/danzelmedia" class="btn" target="_blank">See More</a>
         </div>
       </div>
     </section>
