--- a/index.html
+++ b/index.html
@@ -268,9 +268,7 @@ Created graphics for videos using Photoshop and Adobe After Effects..</p>
             <div class="input-box">
             </div>
             <div class="input-box">
-              <textarea id="Message" name="Message" rows="5" cols="50">
-                Enter text here...
-                </textarea>
+              <textarea id="Message" name="Message" rows="5" cols="50">Enter text here...</textarea>
             </div>
             <div class="input-box">
               <input type="submit" class="send-btn" name="" value="Send"/>
@@ -282,7 +280,7 @@ Created graphics for videos using Photoshop and Adobe After Effects..</p>
 
     <footer class="footer">
       <span class="footer-title">Daniel Udoncy</span>
-      <p>Copyright @2022 <a href="#">danzelmedia</a>. All Rights Reserved.</p>
+      <p>Copyright @2023 <a href="#">danzelmedia</a>. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js" charset="utf-8"></script>
