--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Created graphics for videos using Photoshop and Adobe After Effects..</p>
           </div>
           <div class="bar">
             <div class="info">
-              <span>photography</span>
+              <span>cybersecurity</span>
               <span>80%</span>
             </div>
             <div class="line photography"></div>
