--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <h1>Hello, I'm<br><span>daniel UDONCY</span></h1>
         <div class="animated-text">
           <h3>Web Designer</h3>
+          <h3>Mobile App Developer</h3>
           <h3>Motion Graphics Designer</h3>
           <h3>VideoGrapher</h3>
         </div>
@@ -91,6 +92,13 @@ Created graphics for videos using Photoshop and Adobe After Effects..</p>
         <div class="column col-right reveal">
           <div class="bar">
             <div class="info">
+              <span>Flutter</span>
+              <span>95%</span>
+            </div>
+            <div class="line Adobe"></div>
+          </div>
+          <div class="bar">
+            <div class="info">
               <span>Adobe</span>
               <span>95%</span>
             </div>
@@ -112,7 +120,7 @@ Created graphics for videos using Photoshop and Adobe After Effects..</p>
           </div>
           <div class="bar">
             <div class="info">
-              <span>cybersecurity</span>
+              <span>Cybersecurity</span>
               <span>80%</span>
             </div>
             <div class="line photography"></div>
